# overcookedvision

./: .gitignore  README.md  benchmark.py  index.html  pyproject.toml  test_llm.py
logs/: overcooked_qwen3_4b.4643650.out  overcooked_qwen3_8b.4655002.out  overcooked_qwen3vl_8b.4655024.out  overcooked_smoke_a40.4622948.out  overcooked_smoke_a40.4623054.out  overcooked_smoke_a40.4623104.out  overcooked_smoke_a40.4623155.out
overcooked_benchmark/: __init__.py  cli.py  config.py  evaluation.py  metrics.py  openai_client.py  phase.py  rendering.py  symbolic.py  tasks.py  traces.py
overcooked_benchmark/agents/: __init__.py  base.py  openai_text.py  openai_vision.py  prompts.py  scripted.py
overcooked_benchmark/runners/: __init__.py  paired.py  suite.py
replay-ui/public/traces/: latest.json
results/: gpt52_llm_pilot.json  gpt52_llm_smoke.json  gpt52_vlm_pilot.json  gpt54_llm_pilot.json  llm_qwen3_4b_cramped.json  llm_qwen3_8b_cramped.json  smoke_scripted.json  vlm_qwen3_8b_cramped.json
results/gpt52_llm_pilot_traces/: llm-llm_openai_cramped_room_single_delivery_trial0.json  llm-llm_openai_cramped_room_single_delivery_trial1.json  llm-llm_openai_cramped_room_single_delivery_trial2.json
results/gpt52_llm_smoke_traces/: llm-llm_openai_cramped_room_single_delivery_trial0.json
scripts/: scc_llm_qwen3_4b_a40.sh  scc_llm_qwen3_8b_a40.sh  scc_openai_gpt52_llm_pilot.sh  scc_openai_gpt52_llm_smoke.sh  scc_openai_gpt52_vlm_pilot.sh  scc_openai_gpt52_vlm_smoke.sh  scc_smoke_env_a40.sh
tests/: test_experiment.py  test_metrics.py  test_phase.py  test_task_benchmark.py
(+8 files in other folders)
