[project]
name = "overcooked-benchmark"
version = "0.1.0"
description = "Paired LLM/VLM Overcooked benchmark with trajectory metrics."
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "numpy",
    "openai",
    "overcooked-ai",
    "pillow",
    "sentencepiece>=0.2.1",
    "torch>=2.0",
    "transformers>=4.51.0",
]

[project.scripts]
overcooked-benchmark = "overcooked_benchmark.cli:main"
overcooked-summarize = "overcooked_benchmark.summarize:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["overcooked_benchmark*"]
